--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -39,9 +39,9 @@ $mobile-font-size: 10px;
 $mobile-max-width: 770px;
 
 //Current and Next
-$current-next-now-bg: #003367;
-$current-next-next-bg: rgba(0, 51, 103, .85);
-$current-next-txt-color: #ffffff;
+$current-next-now-bg: #f3f3f3;
+$current-next-next-bg: rgba(243, 243, 243, .85);
+$current-next-txt-color: #002d5a;
 //Schedule block colours
 $blocks-sustainer-color: $secondary-color;
 $blocks-regular-color: $off-white-color;
@@ -50,3 +50,7 @@ $blocks-regular-color: $off-white-color;
 $custom-scrollbar-color: #FFF;
 
 $transition-time: 350ms;
+
+$border-curve-radius: 1.25rem;
+$internal-padding: 0.5rem;
+$internal-curve-radius: calc(#{$border-curve-radius} - #{$internal-padding});
