--- a/sass/elements/_navbar.scss
+++ b/sass/elements/_navbar.scss
@@ -1,5 +1,5 @@
 $nav-background: rgba(255, 255, 255, .97);
-$nav-bottom-border: 1px solid rgba(2, 45, 89, .3);
+$nav-bottom-border: .4rem solid rgba(0, 45, 90, .97);
 $nav-links-color: rgb(2, 45, 89);
 
 // How fast search expands and shrinks
@@ -10,6 +10,8 @@ $nav-links-color: rgb(2, 45, 89);
   backdrop-filter: blur(5px);
   background: $nav-background;
   border-bottom: $nav-bottom-border;
+  border-radius: 0 0 $border-curve-radius $border-curve-radius;
+  background-clip: padding-box;
 
   a {
     color: $nav-links-color;
