feat: the stuff i had done for new schedule (alyx wanted this)

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -6,6 +6,7 @@
 @import "schedule";
 @import "seasonTables";
 @import "snow";
+@import "timeslot";
 @import "aprilFools";
 @import "show";
 @import "faq";
