--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -147,7 +147,7 @@
   <div class="container p-3">
     <h2>Tracklist</h2>
     {{if .Tracklist}}
-    <table class="table">
+    <table class="table tracklist">
       <thead>
         <tr>
           <th>Track</th>
