--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -62,45 +62,39 @@
 <div class="container-fluid bg-off-white">
   <div class="container">
   {{with .Schedule}}
-  {{if .Table}}
-    <div class="tables-container table">
-      <table class="schedule-table mobile-hide row-headers">
-        <colgroup>
-          <col class="mobile-hide time-col">
-        </colgroup>
-        <tr class="col-headers"></tr>
-        {{with index .Table 0}}
-          {{range .Cells}}
-            <tr>
-              <td class="time-header">{{.Hour | printf "%02d"}}:{{.Minute | printf "%02d"}}</td>
-            </tr>
+  {{if .List}}
+    <ul class="nav nav-tabs" id="schedule-tab" role="tablist">
+      {{range .List}}
+        <li class="nav-item" role="presentation">
+          {{if .Current}}
+            <button class="nav-link active" id="{{.Day.Weekday}}-tab" data-toggle="pill" data-target="#{{.Day.Weekday}}" type="button" role="tab" aria-controls="{{.Day.Weekday}}" aria-selected="true">
+          {{else}}
+            <button class="nav-link" id="{{.Day.Weekday}}-tab" data-toggle="pill" data-target="#{{.Day.Weekday}}" type="button" role="tab" aria-controls="{{.Day.Weekday}}" aria-selected="false">
           {{end}}
+            {{.Day.Weekday}}&nbsp;{{.Day.Format "02"}}
+          </button>
+        </li>
+      {{end}}
+    </ul>
+    <div class="tab-content mt-2" id="schedule-tabContent">
+      {{range .List}}
+        {{if .Current}}
+          <div class="tab-pane show active" id="{{.Day.Weekday}}" role="tabpanel" aria-labelledby="{{.Day.Weekday}}-tab">
+        {{else}}
+          <div class="tab-pane" id="{{.Day.Weekday}}" role="tabpanel" aria-labelledby="{{.Day.Weekday}}-tab">
         {{end}}
-      </table>
-      {{range .Table}}
-        <table class="schedule-table day-{{.Day.Weekday}}">
-          <colgroup>
-            <col class="mobile-only time-col">
-          </colgroup>
-          <tr class="col-headers">
-            <th class="day-header" colspan=2>{{.Day.Weekday}}&nbsp;{{.Day.Format "02"}}</th>
-          </tr>
-          {{range .Cells}}
-            <tr>
-              <td class="time-header mobile-only hour-{{.Hour | printf "%02d"}}">{{.Hour | printf "%02d"}}:{{.Minute | printf "%02d"}}</td>
-              {{if ne .RowSpan 0}}
-              <td rowspan="{{.RowSpan}}" class="schedule-timeslot schedule-block-{{.Item.Block}}" title="{{stripHTML .Item.Desc}}"
-                  {{if .Item.PageURL}} onclick="window.location.href='{{url .Item.PageURL}}'" {{end}} >
-                {{if .Item.PageURL}}
-                  <a href="{{url .Item.PageURL}}" >{{.Item.Name}}</a>
-                {{else}}
-                  <p>{{.Item.Name}}</p>
-                {{end}}
-              </td>
-              {{end}}
-            </tr>
-          {{end}}
-        </table>
+          <ul>
+            {{range .Shows}}
+              <li class="schedule-card">
+                <img src="https://ury.org.uk{{.ShowArtURL}}" width="128" height="128">
+                <div class="card-details">
+                  <h3><a href="{{.PageURL}}">{{.Name}}</a></h3>
+                  <h4>{{.Start.Format "03:04pm"}} - {{.Finish.Format "03:04pm"}}</h4>
+                </div>
+              </li>
+            {{end}}
+          </ul>
+        </div>
       {{end}}
     </div>
   {{else}}
