--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -1,5 +1,5 @@
 .current-next {
-  background: url("/images/bg-banner-1.jpg") center center no-repeat;
+  background: url("/images/bg-banner-1.jpg") center -128px no-repeat;
   background-size: cover;
   color: white;
   box-sizing: content-box;
@@ -75,4 +75,14 @@
     background: $current-next-next-bg;
   }
 
+  .current-and-next-player {
+    transition: max-height 500ms ease;
+    overflow: hidden;
+    max-height: 256px;
+
+    &.closed {
+      transition: max-height 500ms ease;
+      max-height: 0;
+    }
+  }
 }
