--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -48,7 +48,7 @@
     <a aria-hidden="true" href="https://ury.org.uk/listen" class="btn btn-lg btn-block btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="return openLivePlayer();"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
   </div>
 {{end}}
-  <div class="col-12 p-0 current-and-next-now current-and-next-player closed mobile-hide">
+  <div class="col-12 p-0 current-and-next-now current-and-next-player closed">
     {{template "live_player" .}}
     <script>
       function openLivePlayer() {
