--- a/views/elements/live_player.tmpl
+++ b/views/elements/live_player.tmpl
@@ -8,7 +8,8 @@
     <div class="live-now-playing">
         <h2>Listening to {{.PageContext.LongName}}</h2>
         <p id="live-player-track-container" style="display: none">
-            Now playing: <b id="live-player-track-title"></b> by <b id="live-player-track-artist"></b>
+            Now playing: <b id="live-player-track-title"></b>
+            <span class="mobile-hide"> by <b id="live-player-track-artist"></b></span>
         </p>
     </div>
 
