--- a/sass/elements/_navbar.scss
+++ b/sass/elements/_navbar.scss
@@ -17,6 +17,14 @@ $nav-links-color: rgb(2, 45, 89);
     color: $nav-links-color;
   }
 
+  .navbar-pride-logo {
+    -webkit-filter: drop-shadow(1px 1px -2px black)
+                    drop-shadow(-1px -1px 2px black);
+    filter: drop-shadow(-0.5px -0.5px 0 black) 
+            drop-shadow(0.5px 0.5px 0 black);
+  }
+  
+  
   .navbar-toggler {
     line-height: inherit;
     right: 0;
@@ -25,4 +33,5 @@ $nav-links-color: rgb(2, 45, 89);
       background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
     }
   }
+
 }
